[package]
name = "ros_signals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclonedds-rs = "0.4.7"
cdds_derive = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
chrono = {version = "0.4.22", features = ["serde"]}
