[package]
name = "robotics-signals"
version = "0.2.0"
edition = "2021"
authors = ["Sojan James <Sojan.James@gmail.com>"]
description = "Types for Robotics Signals for use with CycloneDDS-rs. The types are derived mostly from ROS2"
license-file = "LICENSE.md"
homepage = "https://github.com/sjames/robotics-signals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclonedds-rs = "0.6"
cdds_derive = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
chrono = {version = "0.4.22", features = ["serde"]}
serde-big-array = "0.4.1"
